syntax = "proto3";

package mysql_sample;
option go_package="mysqlpb";

message Articles {
    string category = 1;
}

message ArticlesRequest {
    Articles category = 1;
}

message ArticlesResponse {
    string result = 1;
}

// message GreetManyTimesRequest {
//     Greeting greeting = 1;
// }

// message GreetManytimesResponse {
//     string result = 1;
// }

// message LongGreetRequest {
//     Greeting greeting = 1;
// }

// message LongGreetResponse {
//     string result = 1;
// }

// message GreetEveryoneRequest {
//     Greeting greeting = 1;
// }

// message GreetEveryoneResponse {
//     string result = 1;
// }

// message GreetWithDeadlineRequest {
//     Greeting greeting = 1;
// }

// message GreetWithDeadlineResponse {
//     string result = 1;
// }

service AritcleService{
    // Unary
    rpc Aritcle(ArticlesRequest) returns (ArticlesResponse) {};

    // // Server Streaming
    // rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManytimesResponse) {};

    // // Client Streaming
    // rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // // BiDi Streaming
    // rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // // Unary With Deadline
    // rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};

}